changed background color and add background svg image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li class="book-title">
               <span
                 ><img
-                  src="https://res.cloudinary.com/bailey85/image/upload/v1575792970/spiral-305142_s09t08.svg"
+                  src="./images/sprial-white.svg"
                   class="BP"
                   alt="" /></span
               >Tomie
@@ -70,7 +70,7 @@
             <li class="book-title">
               <span
                 ><img
-                  src="https://res.cloudinary.com/bailey85/image/upload/v1575792970/spiral-305142_s09t08.svg"
+                  src="./images/sprial-white.svg"
                   class="BP"
                   alt=""
               /></span>
@@ -87,7 +87,7 @@
             <li class="book-title">
               <span
                 ><img
-                  src="https://res.cloudinary.com/bailey85/image/upload/v1575792970/spiral-305142_s09t08.svg"
+                  src="./images/sprial-white.svg"
                   class="BP"
                   alt="" /></span
               >Uzumaki: Spiral into Horror
@@ -108,7 +108,7 @@
             <li class="book-title">
               <span
                 ><img
-                  src="https://res.cloudinary.com/bailey85/image/upload/v1575792970/spiral-305142_s09t08.svg"
+                  src="./images/sprial-white.svg"
                   class="BP"
                   alt="" /></span
               >Gyo: The Death-Stench Creeps
