added alt text to imgs, noopener noreferrer to links and site description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A tribute page to the manga artist Junji Ito">
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Roboto:ital@1&display=swap"
@@ -56,7 +57,7 @@
                 ><img
                   src="./images/sprial-white.svg"
                   class="BP"
-                  alt="" /></span
+                  alt="spining sprial" /></span
               >Tomie
             </li>
             <li class="book-info">
@@ -72,7 +73,7 @@
                 ><img
                   src="./images/sprial-white.svg"
                   class="BP"
-                  alt=""
+                  alt="spining sprial"
               /></span>
               Fragments of Horror
             </li>
@@ -89,7 +90,7 @@
                 ><img
                   src="./images/sprial-white.svg"
                   class="BP"
-                  alt="" /></span
+                  alt="spining sprial" /></span
               >Uzumaki: Spiral into Horror
             </li>
             <li class="book-info">
@@ -110,7 +111,7 @@
                 ><img
                   src="./images/sprial-white.svg"
                   class="BP"
-                  alt="" /></span
+                  alt="spining sprial" /></span
               >Gyo: The Death-Stench Creeps
             </li>
             <li class="book-info">
@@ -129,11 +130,12 @@
             <a
             href="https://myanimelist.net/people/2410/Junji_Itou"
             target="_blank"
+            rel="noopener noreferrer"
             class="find-out-more-link"
           >
             My Anime List</a
           >
-          <a href="https://en.wikipedia.org/wiki/Junji_Ito" target="_blank" class="find-out-more-link">
+          <a href="https://en.wikipedia.org/wiki/Junji_Ito" target="_blank" rel="noopener noreferrer" class="find-out-more-link">
             Wikipedia</a
           >
           </p>
@@ -141,6 +143,6 @@
           </div>
       </div>
     </main>
-    <footer><p>Made by Chris Bailey <a href="https://twitter.com/bailey_coding"><i class="fab fa-twitter-square icon"></i></a></p></footer>
+    <footer><p>Made by Chris Bailey <a href="https://twitter.com/bailey_coding" rel="noopener noreferrer"><i class="fab fa-twitter-square icon"></i></a></p></footer>
   </body>
 </html>
