added line-height and changed p, li and h2 font-size. changed hover color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
           />
           <p id="img-caption">
             Picture of Junji Ito
-            <a href="//commons.wikimedia.org/wiki/User:Jaqen" target="_blank" rel="noopener noreferrer""
+            <a
+              href="//commons.wikimedia.org/wiki/User:Jaqen"
+              target="_blank"
+              rel="noopener noreferrer"
               >by Niccolò Caranti</a
             >
           </p>
@@ -127,20 +130,30 @@
           <p>
             To find out more about Junji Ito check out
             <a
-            href="https://myanimelist.net/people/2410/Junji_Itou"
-            target="_blank"
-            class="find-out-more-link"
-          >
-            My Anime List</a
-          >
-          <a href="https://en.wikipedia.org/wiki/Junji_Ito" target="_blank" class="find-out-more-link">
-            Wikipedia</a
-          >
+              href="https://myanimelist.net/people/2410/Junji_Itou"
+              target="_blank"
+              class="find-out-more-link"
+            >
+              My Anime List</a
+            >
+            <a
+              href="https://en.wikipedia.org/wiki/Junji_Ito"
+              target="_blank"
+              class="find-out-more-link"
+            >
+              Wikipedia</a
+            >
           </p>
-          
-          </div>
+        </div>
       </div>
     </main>
-    <footer><p>Made by Chris Bailey <a href="https://twitter.com/bailey_coding"><i class="fab fa-twitter-square icon"></i></a></p></footer>
+    <footer>
+      <p>
+        Made by Chris Bailey
+        <a href="https://twitter.com/bailey_coding"
+          ><i class="fab fa-twitter-square icon"></i
+        ></a>
+      </p>
+    </footer>
   </body>
 </html>
